# Complier

./: .gitignore  CMakeLists.txt
src/: Makefile  SyntaxTest.c  codeGen.cpp  codeGen.h  compiler  error.cpp  error.h  lexer.l  main.cpp  node.cpp  node.h  objGen.cpp  objGen.h  symtab.cpp  symtab.h  test.sh  type.h  y.output  y.tab.c  y.tab.h
src/rule/: Makefile  a.out  lex.yy.c  lexer.l  parse.y  y.output  y.tab.c  y.tab.h
src/test/: final.c  test_bug.c  test_exp.c  test_fun.c  test_stmt.c
src/test/Fail/: test_bug.c  test_redec2.c  test_redec3.c  test_redec4.c  test_tyoe2.c  test_type.c  test_type1.c  test_type3.c  test_undec1.c  test_undec2.c  test_undec3.c  test_undec4.c
src/test/Success/: test_all.c  test_decl.c  test_exp.c  test_func2.c  test_init.c  test_loop.c  test_loop2.c  test_print.c  test_stmt.c  test_sym1.c  test_sym2.c  test_sym3.c  test_sym_if.c  test_sym_loop.c  test_sym_switch.c  test_while.c
